tests/error/deref_non_ptr.magi
// TEST: Dereferencing a non-pointer should error

main :: () -> i32 {
    a := 42
    b := *a
    return 0
}
